Make alignment modifiers !important fixes

--- a/stylus/base/helpers.styl
+++ b/stylus/base/helpers.styl
@@ -33,10 +33,10 @@ for $display in $displays
   clearfix()
 
 .is-pulled-left
-  float left
+  float left !important
 
 .is-pulled-right
-  float right
+  float right !important
 
 // Overflow
 
@@ -51,13 +51,13 @@ for $display in $displays
 // Text
 
 .has-text-centered
-  text-align center
+  text-align center !important
 
 .has-text-left
-  text-align left
+  text-align left !important
 
 .has-text-right
-  text-align right
+  text-align right !important
 
 for name, pair in $colors
   color = pair['1']
